for test purposes

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -9,6 +9,7 @@ on:
       zkverify_version:
         description: "Commit hash or tag for zkVerify repository"
         type: string
+        default: "main"
       attestation_bot_branch:
         description: "Branch for attestation bot"
         required: false
@@ -28,6 +29,7 @@ on:
       zkverify_version:
         description: "Commit hash or tag for zkVerify repository"
         type: string
+        default: "main"
       attestation_bot_branch:
         description: "Branch for attestation bot"
         required: false
