--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -9,7 +9,6 @@ on:
       zkverify_version:
         description: "Commit hash or tag for zkVerify repository"
         type: string
-        default: "main"
       attestation_bot_branch:
         description: "Branch for attestation bot"
         required: false
@@ -29,7 +28,6 @@ on:
       zkverify_version:
         description: "Commit hash or tag for zkVerify repository"
         type: string
-        default: "main"
       attestation_bot_branch:
         description: "Branch for attestation bot"
         required: false
@@ -129,11 +127,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         if: ${{ inputs.zkverify_version != '' }}
         run: |
-          ./setup.sh --fetch-latest \
+          ./setup.sh --fetch-latest --rebuild \
             --zkverify-version ${{ inputs.zkverify_version || github.event.inputs.zkverify_version }} \
             --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch || github.event.inputs.attestation_bot_branch }} \
             --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }} \
-            --docker-image-tag latest
+            --docker-image-tag ${{ env.SANITIZED_ZKVERIFY_VERSION }}
         working-directory: src/e2e-tests
 
       - name: Run Setup Script (Clone Repositories & Pull zkVerify Docker Image)
