--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -54,6 +54,9 @@ jobs:
   e2e-build-and-test:
     runs-on: ubuntu-latest
 
+    outputs:
+      test_passed: ${{ steps.parse_test_results.outputs.OVERALL_STATUS }}
+
     steps:
       - name: Check that only one input is provided for a zkVerify version
         run: |
@@ -193,6 +196,7 @@ jobs:
         working-directory: src/e2e-tests
 
       - name: Parse Test Results
+        id: parse_test_results
         if: ${{ !cancelled() }}
         run: |
           TEST_OUTPUT=$(cat reports/test_output.txt || echo "")
@@ -299,3 +303,9 @@ jobs:
           docker volume ls
           docker images
         working-directory: src/e2e-tests
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: [e2e-build-and-test]
+    steps:
+      - run: echo '${{ toJSON(needs.e2e-build-and-test.outputs) }}'
