--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      test_passed: ${{ steps.parse_test_results.outputs.OVERALL_STATUS }}
+      test_status: ${{ steps.parse_test_results.outputs.test_status }}
 
     steps:
       - name: Check that only one input is provided for a zkVerify version
@@ -148,15 +148,15 @@ jobs:
             --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }}
         working-directory: src/e2e-tests
 
-      - name: Upload Docker Image Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: zkverify-image
-          path: ${{github.workspace}}/src/e2e-tests/zkverify-image.tar
-          if-no-files-found: error
-          retention-days: 1
-          compression-level: 0
-          overwrite: true
+      # - name: Upload Docker Image Artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: zkverify-image
+      #     path: ${{github.workspace}}/src/e2e-tests/zkverify-image.tar
+      #     if-no-files-found: error
+      #     retention-days: 1
+      #     compression-level: 0
+      #     overwrite: true
 
       - name: Set Up Docker Containers
         run: |
@@ -259,6 +259,7 @@ jobs:
           echo "TOTAL=$TOTAL" >> $GITHUB_ENV
           echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
           echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
+          echo "test_status=$OVERALL_STATUS" >> $GITHUB_OUTPUT
           echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
           echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
 
