--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -54,6 +54,9 @@ jobs:
   e2e-build-and-test:
     runs-on: ubuntu-latest
 
+    outputs:
+      test_status: ${{ steps.parse_test_results.outputs.test_status }}
+
     steps:
       - name: Check that only one input is provided for a zkVerify version
         run: |
@@ -193,6 +196,7 @@ jobs:
         working-directory: src/e2e-tests
 
       - name: Parse Test Results
+        id: parse_test_results
         if: ${{ !cancelled() }}
         run: |
           TEST_OUTPUT=$(cat reports/test_output.txt || echo "")
@@ -255,6 +259,7 @@ jobs:
           echo "TOTAL=$TOTAL" >> $GITHUB_ENV
           echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
           echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
+          echo "test_status=$OVERALL_STATUS" >> $GITHUB_OUTPUT
           echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
           echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
 
