Add proofofsql, zkverifyjs upgrade, readme updates, additional seed phrase for new proof type

--- a/.env.testnet.rpc
+++ b/.env.testnet.rpc
@@ -10,3 +10,4 @@ SEED_PHRASE_3='INSERT_SEED_PHRASE'
 SEED_PHRASE_4='INSERT_SEED_PHRASE'
 SEED_PHRASE_5='INSERT_SEED_PHRASE'
 SEED_PHRASE_6='INSERT_SEED_PHRASE'
+SEED_PHRASE_7='INSERT_SEED_PHRASE'
