--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -56,7 +56,7 @@ runs:
         ref: main
         clean: true
         fetch-depth: 1
-        token: ${{ secrets.GH_TOKEN }}
+        # token: ${{ secrets.GH_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
