--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -51,12 +51,12 @@ runs:
 
     - name: Checkout Code
       uses: actions/checkout@v4
-      with:
-        repository: HorizenLabs/zkVerify-qa
-        ref: main
-        clean: true
-        fetch-depth: 1
-        # token: ${{ secrets.GH_TOKEN }}
+      # with:
+      #   repository: HorizenLabs/zkVerify-qa
+      #   ref: main
+      #   clean: true
+      #   fetch-depth: 1
+      #   token: ${{ secrets.GH_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
