--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -73,11 +73,11 @@ runs:
 
     - name: Remove Existing node_modules
       run: rm -rf node_modules
-      working-directory: src
+      # working-directory: src
 
     - name: Install npm Dependencies
       run: npm ci
-      working-directory: src
+      # working-directory: src
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
