--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -51,12 +51,12 @@ runs:
 
     - name: Checkout Code
       uses: actions/checkout@v4
-      # with:
-      #   repository: HorizenLabs/zkVerify-qa
-      #   ref: main
-      #   clean: true
-      #   fetch-depth: 1
-      #   token: ${{ secrets.GH_TOKEN }}
+      with:
+        repository: HorizenLabs/zkVerify-qa
+        ref: main
+        clean: true
+        fetch-depth: 1
+        token: ${{ secrets.GH_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -73,11 +73,11 @@ runs:
 
     - name: Remove Existing node_modules
       run: rm -rf node_modules
-      # working-directory: src
+      working-directory: src
 
     - name: Install npm Dependencies
       run: npm ci
-      # working-directory: src
+      working-directory: src
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
