--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -17,6 +17,8 @@ inputs:
     required: false
     type: string
     default: "main"
+  GH_TOKEN:
+    type: string
 secrets:
   DOCKER_HUB_USERNAME:
     required: true
