--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -49,6 +49,9 @@ runs:
           echo "Validation passed. Proceeding with the workflow."
         fi
 
+    - name: Check for token
+      run: echo "token = ${{ inputs.GH_TOKEN }} || ${{ secrets.GH_TOKEN }}"
+
     - name: Checkout Code
       uses: actions/checkout@v4
       with:
@@ -56,7 +59,7 @@ runs:
         ref: main
         clean: true
         fetch-depth: 1
-      #   token: ${{ inputs.GH_TOKEN }} || ${{ secrets.GH_TOKEN }}
+        token: ${{ inputs.GH_TOKEN }} || ${{ secrets.GH_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
