--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -17,6 +17,8 @@ inputs:
     required: false
     type: string
     default: "main"
+  GH_TOEN:
+    type: string
 secrets:
   DOCKER_HUB_USERNAME:
     required: true
@@ -66,6 +68,7 @@ runs:
         ref: main
         clean: true
         fetch-depth: 1
+        token: ${{ inputs.GH_TOKEN }} || ${{ secrets.GH_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
