--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -54,7 +54,7 @@ runs:
     - name: Check for token
       run: |
         if [ "${{ inputs.GH_TOKEN }}" != "" ]; then
-          echo "gh token provided as input"
+          echo "gh token provided as input ${{ inputs.GH_TOKEN }}"
         elif [ "${{ secrets.GH_TOKEN }}" != "" ]; then
           echo "gh token provided as secret"
         else
@@ -68,7 +68,7 @@ runs:
         ref: main
         clean: true
         fetch-depth: 1
-        token: ${{ inputs.GH_TOKEN }} || ${{ secrets.GH_TOKEN }}
+        token: ${{ inputs.GH_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
