--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: HorizenLabs/zkVerify-qa
-          ref: main
+          ref: yuriko/WEB3-1184
           clean: true
           fetch-depth: 1
           token: ${{ secrets.GH_TOKEN }}
