--- a/.github/actions/e2e-test/action.yml
+++ b/.github/actions/e2e-test/action.yml
@@ -72,11 +72,11 @@ runs:
       run: npm ci
       working-directory: src
 
-    # - name: Login to Docker Hub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
-    #     password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
     - name: Sanitize zkVerify_version
       id: sanitize_version
@@ -121,18 +121,6 @@ runs:
           --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }}
       working-directory: src/e2e-tests
 
-    # - name: Upload Docker Image Artifact
-    #   needs: setup_and_build_image
-    #   if: ${{ inputs.zkverify_version != '' }}
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: zkverify-image
-    #     path: ${{github.workspace}}/src/e2e-tests/zkverify-image.tar
-    #     if-no-files-found: error
-    #     retention-days: 1
-    #     compression-level: 0
-    #     overwrite: true
-
     - name: Set Up Docker Containers
       run: |
         docker compose down -v
@@ -170,98 +158,98 @@ runs:
         npm --prefix ../../ run test:e2e 2>&1 | tee reports/test_output.txt
       working-directory: src/e2e-tests
 
-    # - name: Parse Test Results
-    #   id: parse_test_results
-    #   if: ${{ !cancelled() }}
-    #   run: |
-    #     TEST_OUTPUT=$(cat reports/test_output.txt || echo "")
+    - name: Parse Test Results
+      id: parse_test_results
+      if: ${{ !cancelled() }}
+      run: |
+        TEST_OUTPUT=$(cat reports/test_output.txt || echo "")
 
-    #     # Initialize variables
-    #     PASSED=0
-    #     FAILED=0
-    #     SKIPPED=0
-    #     TOTAL=0
-    #     SUITE_FAILED=0
-    #     OVERALL_STATUS="failure"
-    #     OVERALL_STATUS_EMOJI=":red_circle:"
-    #     SLACK_MESSAGE="*Test report was not available to parse.*"
+        # Initialize variables
+        PASSED=0
+        FAILED=0
+        SKIPPED=0
+        TOTAL=0
+        SUITE_FAILED=0
+        OVERALL_STATUS="failure"
+        OVERALL_STATUS_EMOJI=":red_circle:"
+        SLACK_MESSAGE="*Test report was not available to parse.*"
 
-    #     # Check if test report is available
-    #     if [ -s reports/test_output.txt ]; then
-    #       # Parse suite results
-    #       if echo "$TEST_OUTPUT" | grep -q 'Test Suites:'; then
-    #         SUITE_FAILED=$(echo "$TEST_OUTPUT" | awk '/Test Suites:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
-    #       fi
+        # Check if test report is available
+        if [ -s reports/test_output.txt ]; then
+          # Parse suite results
+          if echo "$TEST_OUTPUT" | grep -q 'Test Suites:'; then
+            SUITE_FAILED=$(echo "$TEST_OUTPUT" | awk '/Test Suites:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
+          fi
 
-    #       # Parse individual test results
-    #       if echo "$TEST_OUTPUT" | grep -q 'Tests:'; then
-    #         PASSED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="passed,") print $(i-1)}')
-    #         FAILED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
-    #         SKIPPED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="skipped,") print $(i-1)}')
-    #         TOTAL=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="total") print $(i-1)}')
+          # Parse individual test results
+          if echo "$TEST_OUTPUT" | grep -q 'Tests:'; then
+            PASSED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="passed,") print $(i-1)}')
+            FAILED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
+            SKIPPED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="skipped,") print $(i-1)}')
+            TOTAL=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="total") print $(i-1)}')
 
-    #         PASSED=${PASSED:-0}
-    #         FAILED=${FAILED:-0}
-    #         SKIPPED=${SKIPPED:-0}
-    #         TOTAL=${TOTAL:-0}
+            PASSED=${PASSED:-0}
+            FAILED=${FAILED:-0}
+            SKIPPED=${SKIPPED:-0}
+            TOTAL=${TOTAL:-0}
 
-    #         # Build the Slack message with test results
-    #         SLACK_MESSAGE="*Test Results:*\n*Passed:* $PASSED\n*Failed:* $FAILED\n*Skipped:* $SKIPPED\n*Total:* $TOTAL"
-    #       fi
+            # Build the Slack message with test results
+            SLACK_MESSAGE="*Test Results:*\n*Passed:* $PASSED\n*Failed:* $FAILED\n*Skipped:* $SKIPPED\n*Total:* $TOTAL"
+          fi
 
-    #       # Check if no tests were run
-    #       if [ "$TOTAL" -eq 0 ]; then
-    #         OVERALL_STATUS="failure"
-    #         OVERALL_STATUS_EMOJI=":red_circle:"
-    #         SLACK_MESSAGE="*No tests were executed!*"
-    #       fi
+          # Check if no tests were run
+          if [ "$TOTAL" -eq 0 ]; then
+            OVERALL_STATUS="failure"
+            OVERALL_STATUS_EMOJI=":red_circle:"
+            SLACK_MESSAGE="*No tests were executed!*"
+          fi
 
-    #       # If any test suite failed (captures code/import errors etc.), override the overall status to failure
-    #       if [ "$SUITE_FAILED" -gt 0 ]; then
-    #         OVERALL_STATUS="failure"
-    #         OVERALL_STATUS_EMOJI=":red_circle:"
-    #         SLACK_MESSAGE="$SLACK_MESSAGE\n*Test Suites Failed:* $SUITE_FAILED"
-    #       elif [ "$FAILED" -eq 0 ] && [ "$TOTAL" -gt 0 ]; then
-    #         OVERALL_STATUS="success"
-    #         OVERALL_STATUS_EMOJI=":large_green_circle:"
-    #       fi
-    #     fi
+          # If any test suite failed (captures code/import errors etc.), override the overall status to failure
+          if [ "$SUITE_FAILED" -gt 0 ]; then
+            OVERALL_STATUS="failure"
+            OVERALL_STATUS_EMOJI=":red_circle:"
+            SLACK_MESSAGE="$SLACK_MESSAGE\n*Test Suites Failed:* $SUITE_FAILED"
+          elif [ "$FAILED" -eq 0 ] && [ "$TOTAL" -gt 0 ]; then
+            OVERALL_STATUS="success"
+            OVERALL_STATUS_EMOJI=":large_green_circle:"
+          fi
+        fi
 
-    #     # Write environment variables to pass between workflow steps
-    #     echo "PASSED=$PASSED" >> $GITHUB_ENV
-    #     echo "FAILED=$FAILED" >> $GITHUB_ENV
-    #     echo "SKIPPED=$SKIPPED" >> $GITHUB_ENV
-    #     echo "TOTAL=$TOTAL" >> $GITHUB_ENV
-    #     echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
-    #     echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
-    #     echo "test_status=$OVERALL_STATUS" >> $GITHUB_OUTPUT
-    #     echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
-    #     echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
+        # Write environment variables to pass between workflow steps
+        echo "PASSED=$PASSED" >> $GITHUB_ENV
+        echo "FAILED=$FAILED" >> $GITHUB_ENV
+        echo "SKIPPED=$SKIPPED" >> $GITHUB_ENV
+        echo "TOTAL=$TOTAL" >> $GITHUB_ENV
+        echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
+        echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
+        echo "test_status=$OVERALL_STATUS" >> $GITHUB_OUTPUT
+        echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
+        echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
 
-    #     if [ "$OVERALL_STATUS" == "failure" ]; then
-    #       exit 1
-    #     fi
-    #   working-directory: src/e2e-tests
+        if [ "$OVERALL_STATUS" == "failure" ]; then
+          exit 1
+        fi
+      working-directory: src/e2e-tests
 
-    # - name: Send Slack Notification
-    #   if: ${{ !cancelled() }}
-    #   uses: slackapi/slack-github-action@v1.25.0
-    #   with:
-    #     payload: |
-    #       {
-    #         "blocks": [
-    #           {
-    #             "type": "section",
-    #             "text": {
-    #               "type": "mrkdwn",
-    #               "text": "${{ env.OVERALL_STATUS_EMOJI }} *zkVerify E2E TEST STATUS:* ${{ env.OVERALL_STATUS }} ${{ env.OVERALL_STATUS_EMOJI }}\n\n${{ env.SLACK_MESSAGE }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
-    #             }
-    #           }
-    #         ]
-    #       }
-    #   env:
-    #     SLACK_WEBHOOK_URL: ${{ secrets.QA_SLACK_WEBHOOK_URL }}
-    #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+    - name: Send Slack Notification
+      if: ${{ !cancelled() }}
+      uses: slackapi/slack-github-action@v1.25.0
+      with:
+        payload: |
+          {
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "${{ env.OVERALL_STATUS_EMOJI }} *zkVerify E2E TEST STATUS:* ${{ env.OVERALL_STATUS }} ${{ env.OVERALL_STATUS_EMOJI }}\n\n${{ env.SLACK_MESSAGE }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
+                }
+              }
+            ]
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.QA_SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
     # - name: Cleanup Docker resources
     #   if: always()
