--- a/.github/actions/e2e-test/action.yml
+++ b/.github/actions/e2e-test/action.yml
@@ -38,10 +38,10 @@ runs:
   steps:
     - name: Check that only one input is provided for a zkVerify version
       run: |
-        if [ "${{ inputs.zkverify_docker_tag }}" != "" ] && [ "${{ inputs.zkverify_version }}" != "" ] && [ "${{ github.event.inputs.zkverify_docker_tag }}" != "" ] && [ "${{ github.event.inputs.zkverify_version }}" != "" ]; then
+        if [ "${{ inputs.zkverify_docker_tag }}" != "" ] && [ "${{ inputs.zkverify_version }}" != "" ]; then
           echo "Error: Both zkverify_docker_tag and zkverify_version cannot be provided."
           exit 1
-        elif [ "${{ inputs.zkverify_docker_tag }}" == "" ] && [ "${{ inputs.zkverify_version }}" == "" ] && [ "${{ github.event.inputs.zkverify_docker_tag }}" == "" ] && [ "${{ github.event.inputs.zkverify_version }}" == "" ]; then
+        elif [ "${{ inputs.zkverify_docker_tag }}" == "" ] && [ "${{ inputs.zkverify_version }}" == "" ]; then
           echo "Error: Either zkverify_docker_tag or zkverify_version must be provided."
           exit 1
         else
@@ -80,7 +80,7 @@ runs:
       if: ${{ inputs.zkverify_version != '' }}
       run: |
         # Determine the source of zkverify_version
-        VERSION="${{ inputs.zkverify_version || github.event.inputs.zkverify_version }}"
+        VERSION="${{ inputs.zkverify_version }}"
 
         # Replace '/' with '-' and remove any other invalid characters for Docker tags
         SANITIZED_VERSION=$(echo "$VERSION" | tr '/' '-' | sed 's/[^a-zA-Z0-9_.-]/-/g')
@@ -101,9 +101,9 @@ runs:
       if: ${{ inputs.zkverify_version != '' }}
       run: |
         ./setup.sh --fetch-latest --rebuild \
-          --zkverify-version ${{ inputs.zkverify_version || github.event.inputs.zkverify_version }} \
-          --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch || github.event.inputs.attestation_bot_branch }} \
-          --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }} \
+          --zkverify-version ${{ inputs.zkverify_version }} \
+          --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch }} \
+          --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch }} \
           --docker-image-tag ${{ env.SANITIZED_ZKVERIFY_VERSION }}
       working-directory: src/e2e-tests
 
@@ -113,16 +113,16 @@ runs:
       if: ${{ inputs.zkverify_docker_tag != '' }}
       run: |
         ./setup.sh --fetch-latest \
-          --docker-image-tag ${{ inputs.zkverify_docker_tag || github.event.inputs.zkverify_docker_tag }} \
-          --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch || github.event.inputs.attestation_bot_branch }} \
-          --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }}
+          --docker-image-tag ${{ inputs.zkverify_docker_tag }} \
+          --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch }} \
+          --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch }}
       working-directory: src/e2e-tests
 
     - name: Set Up Docker Containers
       run: |
         docker compose down -v
-        ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag || github.event.inputs.zkverify_docker_tag }} docker compose build --no-cache
-        ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag || github.event.inputs.zkverify_docker_tag }} docker compose up -d
+        ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag }} docker compose build --no-cache
+        ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag }} docker compose up -d
       working-directory: src/e2e-tests
 
     - name: Wait for Ethereum contract to be deployed
