--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -9,7 +9,6 @@ on:
       zkverify_docker_tag:
         description: "Docker image tag for zkverify"
         type: string
-        default: "0.6.0"
       zkverify_version:
         description: "Commit hash or tag for zkVerify repository"
         type: string
@@ -31,7 +30,6 @@ on:
       zkverify_docker_tag:
         description: "Docker image tag for zkverify"
         type: string
-        default: "0.6.0"
       zkverify_version:
         description: "Commit hash or tag for zkVerify repository"
         type: string
@@ -85,7 +83,8 @@ jobs:
         id: run-e2e-tests
         uses: ./.github/actions/e2e-test
         with:
-          zkverify_docker_tag: ${{ inputs.zkverify_docker_tag || github.event.inputs.docker_tag }}
+          zkverify_docker_tag: 0.6.0
+          # zkverify_docker_tag: ${{ inputs.zkverify_docker_tag || github.event.inputs.docker_tag }}
           zkverify_version: ${{ inputs.zkverify_version || github.event.inputs.zkverify_version }}
           attestation_bot_branch: ${{ inputs.attestation_bot_branch || github.event.inputs.attestation_bot_branch }}
           zkv_contracts_branch: ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }}
