--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -65,7 +65,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: HorizenLabs/zkVerify-qa
-          ref: yuriko/WEB3-1184-fix
+          ref: main
           clean: true
           fetch-depth: 1
           token: ${{ secrets.GH_TOKEN }}
