--- a/.github/actions/e2e-test/action.yml
+++ b/.github/actions/e2e-test/action.yml
@@ -26,17 +26,19 @@ inputs:
   QA_SLACK_WEBHOOK_URL:
     required: true
 
+outputs:
+  test_status: 
+    value: ${{ steps.parse_test_results.outputs.test_status }}
+
 env:
   NODE_VERSION: "20"
 
 runs:
   using: "composite"
 
-  outputs:
-    test_status: ${{ steps.parse_test_results.outputs.test_status }}
-
   steps:
     - name: Check that only one input is provided for a zkVerify version
+      shell: bash
       run: |
         if [ "${{ inputs.zkverify_docker_tag }}" != "" ] && [ "${{ inputs.zkverify_version }}" != "" ]; then
           echo "Error: Both zkverify_docker_tag and zkverify_version cannot be provided."
@@ -62,10 +64,12 @@ runs:
           ${{ runner.os }}-npm-
 
     - name: Remove Existing node_modules
+      shell: bash
       run: rm -rf node_modules
       working-directory: src
 
     - name: Install npm Dependencies
+      shell: bash
       run: npm ci
       working-directory: src
 
@@ -78,6 +82,7 @@ runs:
     - name: Sanitize zkVerify_version
       id: sanitize_version
       if: ${{ inputs.zkverify_version != '' }}
+      shell: bash
       run: |
         # Determine the source of zkverify_version
         VERSION="${{ inputs.zkverify_version }}"
@@ -99,6 +104,7 @@ runs:
       env:
         GH_TOKEN: ${{ inputs.GH_TOKEN }}
       if: ${{ inputs.zkverify_version != '' }}
+      shell: bash
       run: |
         ./setup.sh --fetch-latest --rebuild \
           --zkverify-version ${{ inputs.zkverify_version }} \
@@ -111,6 +117,7 @@ runs:
       env:
         GH_TOKEN: ${{ inputs.GH_TOKEN }}
       if: ${{ inputs.zkverify_docker_tag != '' }}
+      shell: bash
       run: |
         ./setup.sh --fetch-latest \
           --docker-image-tag ${{ inputs.zkverify_docker_tag }} \
@@ -119,6 +126,7 @@ runs:
       working-directory: src/e2e-tests
 
     - name: Set Up Docker Containers
+      shell: bash
       run: |
         docker compose down -v
         ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag }} docker compose build --no-cache
@@ -126,6 +134,7 @@ runs:
       working-directory: src/e2e-tests
 
     - name: Wait for Ethereum contract to be deployed
+      shell: bash
       run: |
         MAX_WAIT_TIME=300
         wait_time=0
@@ -150,6 +159,7 @@ runs:
 
     - name: Run E2E tests
       id: run_tests
+      shell: bash
       run: |
         mkdir -p reports
         npm --prefix ../../ run test:e2e 2>&1 | tee reports/test_output.txt
@@ -158,6 +168,7 @@ runs:
     - name: Parse Test Results
       id: parse_test_results
       if: ${{ !cancelled() }}
+      shell: bash
       run: |
         TEST_OUTPUT=$(cat reports/test_output.txt || echo "")
 
@@ -220,7 +231,6 @@ runs:
         echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
         echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
         echo "test_status=$OVERALL_STATUS" >> $GITHUB_OUTPUT
-        echo "::set-output name=test_status::$OVERALL_STATUS"
         echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
         echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
 
@@ -251,6 +261,7 @@ runs:
 
     - name: Cleanup Docker resources
       if: always()
+      shell: bash
       run: |
         echo "Cleaning up Docker resources..."
         docker compose -f docker-compose.yml down -v
