--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -63,6 +63,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
+      - uses: actions/checkout@v4
         with:
           repository: HorizenLabs/zkVerify-qa
           ref: main
