--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -79,7 +79,8 @@ services:
         condition: service_healthy
       local_node:
         condition: service_healthy
-    restart: unless-stopped
+    # restart: unless-stopped
+    restart: on-failure:50
     environment:
       - "DB_USER=${SUBQUERY_DB_USER}"
       - "DB_PASS=${SUBQUERY_DB_PASS}"
@@ -93,6 +94,7 @@ services:
       - ./configs/attestation-bot/entrypoint.sh:/usr/local/bin/entrypoint.sh:ro
     entrypoint: [/usr/local/bin/entrypoint.sh]
     command:
+      - tail -f /dev/null
       - -f=/app
       - --network-endpoint=ws://local_node:9944
       - --db-schema=app
