--- a/src/e2e-tests/services/anvil/Dockerfile
+++ b/src/e2e-tests/services/anvil/Dockerfile
@@ -5,7 +5,7 @@ FROM ghcr.io/foundry-rs/foundry:${FOUNDRY_VERSION}
 WORKDIR /anvil
 
 # Install required packages
-RUN apk --no-cache add curl jq openssh-client
+RUN apk --no-cache add curl jq
 
 # Copy entrypoint script and contracts
 COPY ./anvil/entrypoint.sh /anvil/entrypoint.sh
