WEB3-1287: Fix error in test setup (#23)

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -21,6 +21,11 @@ on:
         default: "main"
       artifact_name:
         type: string
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+        required: false
+        default: false
 
   workflow_call:
     inputs:
@@ -62,6 +67,11 @@ jobs:
       test_status: ${{ steps.run-e2e-tests.outputs.test_status }}
 
     steps:
+      - uses: actions/checkout@v4
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
+
       - uses: actions/checkout@v4
         with:
           repository: HorizenLabs/zkVerify-qa
