--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ src/proof-generator/risc0/methods/guest/Cargo.lock
 src/proof-generator/risc0/target
 src/proof-generator/risc0/data
 src/performance/input_data
+src/performance/funded_accounts
 
 # Prevent accidentally committing seedphrases
 .env
