--- a/.env.performance
+++ b/.env.performance
@@ -1,3 +1,4 @@
 ZKVERIFY_NETWORK=wss://testnet-rpc.zkverify.io
 FUNDING_SEED_PHRASE=
+FUNDED_ACCOUNTS_FILE=./src/performance/funded_accounts/funded_accounts_2025-02-07.json
 DATA_FOLDER=./src/performance/data
