WEB3-1384 - aggretion added to docker compose and setup script

--- a/src/e2e-tests/.env
+++ b/src/e2e-tests/.env
@@ -27,3 +27,6 @@ ZKV_ATTEST_BOT_ETH_RETRY_INTERVAL=60000
 ZKV_ATTEST_BOT_ETH_RETRY_GAS_INCREASE_PERCENTAGE=30
 ZKV_ATTEST_BOT_ETH_JSON_RPC_PROVIDER_URL="http://anvil-node:8545"
 
+# Aggregation app configs
+AGGREGATOR_PROVIDER_WS=ws://local_node:${NODE_NET_RPC_WS_PORT}
+AGGREGATOR_SENDER_CREDENTIALS=//Alice
