--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ src/proof-generator/risc0/Cargo.lock
 src/proof-generator/risc0/methods/guest/Cargo.lock
 src/proof-generator/risc0/target
 src/proof-generator/risc0/data
+src/performance/funded_accounts
 
 # Prevent accidentally committing seedphrases
 .env
