--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "cli-color": "^2.0.4",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
+    "fastify": "^5.2.1",
     "snarkjs": "^0.7.4",
     "web3": "^4.9.0",
     "yaml": "2.3.0",
-    "zkverifyjs": "^0.3.0"
+    "zkverifyjs": "file:./zkverifyjs-0.7.0.tgz"
   },
   "devDependencies": {
     "@babel/preset-env": "7.21.5",
