--- a/src/rpc-tests/Dockerfile
+++ b/src/rpc-tests/Dockerfile
@@ -8,6 +8,7 @@ COPY .env.testnet.rpc ./
 COPY jest.config.local.rpc.js ./
 COPY jest.config.testnet.rpc.js ./
 COPY tsconfig.json ./
+COPY zkverifyjs-0.7.0.tgz ./
 
 RUN npm install
 
