update utils import for docker

--- a/src/rpc-tests/Dockerfile
+++ b/src/rpc-tests/Dockerfile
@@ -15,7 +15,7 @@ COPY zkverifyjs-0.7.0.tgz ./
 RUN npm install
 
 COPY src/rpc-tests ./src/rpc-tests
-COPY src/utils ./src/utils
+COPY src/utils /usr/src/app/src/utils
 COPY src/tests ./src/tests
 
 EXPOSE 3000
