rpc-tests working and readme / commands updated

--- a/.env.testnet.rpc
+++ b/.env.testnet.rpc
@@ -11,3 +11,9 @@ SEED_PHRASE_4='INSERT_SEED_PHRASE'
 SEED_PHRASE_5='INSERT_SEED_PHRASE'
 SEED_PHRASE_6='INSERT_SEED_PHRASE'
 SEED_PHRASE_7='INSERT_SEED_PHRASE'
+SEED_PHRASE_8='INSERT_SEED_PHRASE'
+SEED_PHRASE_9='INSERT_SEED_PHRASE'
+SEED_PHRASE_10='INSERT_SEED_PHRASE'
+SEED_PHRASE_11='INSERT_SEED_PHRASE'
+SEED_PHRASE_12='INSERT_SEED_PHRASE'
+SEED_PHRASE_13='INSERT_SEED_PHRASE'
