--- a/src/rpc-tests/docker-compose.yml
+++ b/src/rpc-tests/docker-compose.yml
@@ -2,17 +2,12 @@ version: '3.8'
 
 services:
   rpc-tests:
-    build: .
+    build:
+      context: ../..
+      dockerfile: src/rpc-tests/Dockerfile
     volumes:
       - ./reports:/usr/src/app/reports
-    environment:
-      - RPC_URL=${RPC_URL}
-      - WEBSOCKET=${WEBSOCKET}
-      - SEED_PHRASE_1=${SEED_PHRASE_1}
-      - SEED_PHRASE_2=${SEED_PHRASE_2}
-      - SEED_PHRASE_3=${SEED_PHRASE_3}
-      - SEED_PHRASE_4=${SEED_PHRASE_4}
-      - SEED_PHRASE_5=${SEED_PHRASE_5}
-      - SEED_PHRASE_6=${SEED_PHRASE_6}
+    env_file:
+      - ../../.env
     command: >
       sh -c "if [ \"$TEST_ENV\" = 'local' ]; then npm run test:rpc:local; else npm run test:rpc:testnet; fi"
